needed to change the min-width for header again. Didn't fully fix overlap issues

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -5,7 +5,7 @@ header {
   margin: 0rem;
   padding 0rem;
   width: 100%;
-  min-width: 47rem;
+  min-width: 52rem;
   height: 16rem;
   z-index: 10;
 }
